<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/launchscreen_logo2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/email_label"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="#333333"
        android:textSize="16sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/nickname_label"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/nickname_txt"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/nickname_hint"
        android:inputType="textPersonName"
        android:textColorHint="#333333"
        android:textSize="16sp" />

    <Button
        android:id="@+id/profileButton1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="#aaaaaa"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/profile_hint"
        android:textSize="16sp" />

</LinearLayout>