<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.genfengxue.windenglish.bat1" >

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/launchscreen_logo2" 
        android:contentDescription="@string/app_name"
        />

    <EditText
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/loginLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="@android:drawable/editbox_background"
        android:textSize="16sp"
        android:hint="@string/login_hint"
        android:textColorHint="#333333">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/loginText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:textSize="16sp"
        android:background="#aaaaaa"
        android:textColor="#ffffff"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginText"
        android:layout_alignStart="@+id/loginText"
        android:layout_below="@+id/loginLogo"
        android:layout_marginTop="34dp"
        android:textSize="14sp"
        android:textColor="#999999"
        android:text="@string/login_text" />

    <EditText
        android:id="@+id/loginText2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignLeft="@+id/loginText"
        android:layout_alignStart="@+id/loginText"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/loginText"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColorHint="#333333"
        android:textSize="16sp" >
    </EditText>

</RelativeLayout>